# engine

./: CMakeLists.txt  LICENSE  README.md
include/renderer/: all.h  camera.h  color.h  face.h  mesh.h  renderer.h
include/renderer/core/: color.h  face.h  mesh.h  vertex.h
include/renderer/loaders/: obj_loader.h
scripts/: script.sh
src/: main.cpp
src/examples/: 01_load_and_draw.cpp  02_transformations.cpp  03_camera_controls.cpp  04_backface_culling.cpp
src/renderer/: camera.cpp  face.cpp  mesh.cpp  renderer.cpp
src/renderer/camera/: camera.cpp
src/renderer/core/: face.cpp  mesh.cpp
src/renderer/loaders/: obj_loader.cpp
src/renderer/render/: renderer.cpp
